<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    android:paddingHorizontal="50dp"
    tools:context=".ui.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/ivSignInIcon"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/tvWelcome"
        android:paddingBottom="50dp"
        android:src="@drawable/ic_seaweed_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvWelcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSignInIcon" />

    <TextView
        android:id="@+id/tvDescriptionWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:text="@string/tvDescriptionSignIn"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSignIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:text="@string/btnSignIn"
        android:textColor="@color/blue_200"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionWelcome"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/blue_200"
        android:padding="15dp"
        android:text="@string/btnSignUp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>