<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctSignInLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="25dp"
        tools:context=".ui.signin.SignInFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSignInTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/tvSignIn"
                android:textColor="@color/blue_200"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfSignInEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/tfEmail"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfSignInPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/tfPassword"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/btnSignInEnter"
                app:cornerRadius="25dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

