<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:forceDarkAllowed="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSignUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/tvSignUpText"
            android:textColor="@color/blue_200"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfSignUpEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/tfEmail"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfSignUpPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/tfPassword"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfSignUpPasswordConfirmation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/tfPassword"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:text="@string/btnSignUpRegister"
            app:cornerRadius="25dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>